2015-04-11  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DLayerNode.h:
	* Extrusion.cpp:
	* X3DLayerNode.cpp:
	* X3DGeometryNode.cpp:
	* PlaneSensor.cpp:
	* X3DPointingDeviceSensorContext.h:
	* X3DPointingDeviceSensorContext.cpp: 

2015-03-30  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DTextureNode.h:
	* X3DTextureNode.cpp: 

2015-03-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* Makefile.in: 

2015-03-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.in: 

2015-03-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.in:
	* libtitania-x3d.cproj: 

2015-03-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Context.cpp: 

2015-03-23  Holger Seelig  <holger.seelig@yahoo.de>

	* RenderingProperties.cpp: 

2015-03-18  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.cpp: 

2015-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* TimeSensor.cpp:
	* X3DTimeDependentNode.cpp: 

2015-03-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.h:
	* Text.cpp:
	* Shape.h:
	* X3DRenderer.cpp:
	* Shape.cpp:
	* ShapeContainer.h:
	* ShapeContainer.cpp:
	* Arc2D.h:
	* Disk2D.h:
	* LineSet.h:
	* X3DShapeNodeTool.h:
	* Arc2D.cpp:
	* X3DShapeNode.h:
	* PointSet.h:
	* RenderingProperties.cpp:
	* Circle2D.h:
	* ColorRGBA.h:
	* Disk2D.cpp:
	* LineSet.cpp:
	* PointSet.cpp:
	* X3DShapeNode.cpp:
	* X3DExecutionContext.cpp:
	* ColorRGBA.cpp:
	* Circle2D.cpp:
	* Polyline2D.h:
	* Polypoint2D.h:
	* Polyline2D.cpp:
	* Polypoint2D.cpp:
	* IndexedLineSet.h:
	* X3DGeometryNode.h:
	* IndexedLineSet.cpp:
	* X3DGeometryNode.cpp:
	* IndexedFaceSet.cpp:
	* X3DRenderingContext.cpp:
	* ParticleSystem.h:
	* ParticleSystem.cpp: 

2015-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* LOD.cpp: 

2015-02-11  Holger Seelig  <holger.seelig@yahoo.de>

	* LOD.cpp:
	* GeoLOD.cpp: 

2015-02-11  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DRenderer.cpp:
	* X3DTexture.h:
	* GoldenGate.cpp:
	* X3DTexture.cpp:
	* Array.h:
	* Global.h:
	* Browser.h:
	* Context.h: